--- a/i18n/it_IT.yaml
+++ b/i18n/it_IT.yaml
@@ -142,7 +142,7 @@ backend:
   error:
     common:
       invalid_url:
-        other: Invalid URL.
+        other: URL non valido.
     password:
       space_invalid:
         other: La password non può contenere spazi.
@@ -204,7 +204,7 @@ backend:
       already_deleted:
         other: Questo post è stato eliminato.
       under_review:
-        other: Your post is awaiting review. It will be visible after it has been approved.
+        other: Il tuo post è in attesa di revisione. Sarà visibile dopo essere stato approvato.
       not_found:
         other: domanda non trovata
       cannot_deleted:
@@ -491,14 +491,14 @@ backend:
     accepted:
       other: Accettato
     edit:
-      other: edit
+      other: modifica
   review:
     queued_post:
-      other: Queued post
+      other: Post in coda
     flagged_post:
-      other: Flagged post
+      other: Post contrassegnato
     suggested_post_edit:
-      other: Suggested edits
+      other: Modifiche suggerite
 # The following fields are used for interface presentation(Front-end)
 ui:
   how_to_format:
@@ -680,8 +680,8 @@ ui:
       empty: Non può essere vuoto.
     msg:
       empty: Per favore seleziona un motivo
-      not_a_url: URL format is incorrect.
-      url_not_match: URL origin does not match the current website.
+      not_a_url: Formato URL errato.
+      url_not_match: L'origine dell'URL non corrisponde al sito web corrente.
   tag_modal:
     title: Crea un nuovo tag
     form:
@@ -999,8 +999,10 @@ ui:
       change_email_info: >-
         Abbiamo inviato una mail a quell'indirizzo. Si prega di seguire le istruzioni di conferma.
       email:
-        label: Nuova email
-        msg: La nuova email non può essere vuota.
+        label: Email
+      new_email:
+        label: New email
+        msg: New email cannot be empty.
       pass:
         label: Password attuale
         msg: La password non può essere vuota
@@ -1049,7 +1051,7 @@ ui:
     asked: chiesto
     update: Modificato
     edit: modificato
-    commented: commented
+    commented: commentato
     Views: Visualizzati
     Follow: Segui
     Following: Segui già
@@ -1067,7 +1069,7 @@ ui:
       title: Risposte
       score: Punteggio
       newest: Più recenti
-      oldest: Oldest
+      oldest: Meno recente
       btn_accept: Accetta
       btn_accepted: Accettato
     write_answer:
@@ -1092,13 +1094,13 @@ ui:
       title: Riapri questo post
       content: Sei sicuro di voler riaprire?
     list:
-      confirm_btn: List
-      title: List this post
-      content: Are you sure you want to list?
+      confirm_btn: Listare
+      title: Lista questo post
+      content: Sei sicuro di volerlo listare?
     unlist:
-      confirm_btn: Unlist
-      title: Unlist this post
-      content: Are you sure you want to unlist?
+      confirm_btn: Rimuovi dall'elenco
+      title: Rimuovi questo post
+      content: Sei sicuro di voler rimuovere dall'elenco?
     pin:
       title: Fissa questo post in cima al profilo
       content: Sei sicuro di voler fissare in blocco? Questo post apparirà in cima a tutte le liste.
@@ -1120,9 +1122,9 @@ ui:
     save: Salva
     delete: Elimina
     undelete: Ripristina
-    list: List
-    unlist: Unlist
-    unlisted: Unlisted
+    list: Aggiungi all'elenco
+    unlist: Rimuovi dall'elenco
+    unlisted: Rimosso dall'elenco
     login: Accedi
     signup: Registrati
     logout: Disconnetti
@@ -1153,13 +1155,14 @@ ui:
     reset: Resetta
     tag: Tag
     post_lowercase: post
-    filter: Filter
-    ignore: Ignore
-    submit: Submit
-    normal: Normal
-    closed: Closed
-    deleted: Deleted
-    pending: Pending
+    filter: '﻿Filtra'
+    ignore: Ignora
+    submit: Invia
+    normal: Normale
+    closed: Chiuso
+    deleted: Eliminato
+    pending: In attesa
+    more: More
   search:
     title: Risultati della ricerca
     keywords: Parole chiave
@@ -1176,7 +1179,7 @@ ui:
       more: Altro
     tips:
       title: Suggerimenti per ricerca avanzata
-      tag: "<1>[tag]</1> cerca dentro un tag"
+      tag: "<1>[tag]</1> search with a tag"
       user: "<1>user:username</1> ricerca per autore"
       answer: "<1>risposte:0</1> domande senza risposta"
       score: "<1>punteggio:3</1> messaggi con un punteggio di 3+"
@@ -1406,8 +1409,8 @@ ui:
       votes: "Voti:"
       users: "Utenti:"
       flags: "Flags"
-      reviews: "Reviews:"
-      site_health: Site health
+      reviews: "Revisioni"
+      site_health: Stato del sito
       version: "Versione:"
       https: "HTTPS:"
       upload_folder: "Carica Cartella"
@@ -1422,7 +1425,7 @@ ui:
       database_size: "Dimensioni del database"
       storage_used: "Spazio di archiviazione utilizzato:"
       uptime: "Tempo di attività:"
-      links: Links
+      links: Collegamenti
       plugins: Plugin
       github: GitHub
       blog: Blog
@@ -1530,7 +1533,7 @@ ui:
         content: Un utente sospeso non può accedere.
     questions:
       page_title: Domande
-      unlisted: Unlisted
+      unlisted: Rimosso dall'elenco
       post: Posta
       votes: Voti
       answers: Risposte
@@ -1538,7 +1541,7 @@ ui:
       status: Stato
       action: Azione
       change: Modifica
-      pending: Pending
+      pending: In attesa
       filter:
         placeholder: "Filtra per titolo, domanda:id"
     answers:
@@ -1576,8 +1579,8 @@ ui:
         validate: Email di contatto non valida.
         text: Indirizzo e-mail del contatto chiave responsabile di questo sito.
       check_update:
-        label: Software updates
-        text: Automatically check for updates
+        label: Aggiornamenti Software
+        text: Controlla automaticamente gli aggiornamenti
     interface:
       page_title: Interfaccia
       language:
@@ -1774,6 +1777,9 @@ ui:
       level:
         label: Livello di reputazione richiesto 
         text: Scegli la reputazione richiesta per i privilegi
+      msg:
+        should_be_number: the input should be number
+        number_larger_1: number should be equal or larger than 1
   form:
     optional: (opzionale)
     empty: non può essere vuoto
@@ -1792,22 +1798,22 @@ ui:
     edit_answer: Edita la risposta
     edit_tag: Edita  tag
     empty: Nessuna attività di revisione rimasta.
-    approve_revision_tip: Do you approve this revision?
-    approve_flag_tip: Do you approve this flag?
-    approve_post_tip: Do you approve this post?
-    approve_user_tip: Do you approve this user?
-    suggest_edits: Suggested edits
-    flag_post: Flag post
-    flag_user: Flag user
-    queued_post: Queued post
-    queued_user: Queued user
-    filter_label: Type
-    reputation: reputation
-    flag_post_type: Flagged this post as {{ type }}.
-    flag_user_type: Flagged this user as {{ type }}.
-    edit_post: Edit post
-    list_post: List post
-    unlist_post: Unlist post
+    approve_revision_tip: Approvi questa revisione?
+    approve_flag_tip: Approvi questo contrassegno?
+    approve_post_tip: Approvi questo post?
+    approve_user_tip: Approvate questo utente?
+    suggest_edits: Modifiche suggerite
+    flag_post: Post contrassegnato
+    flag_user: Utente contrassegno
+    queued_post: "Posta in coda\n"
+    queued_user: Utente in coda
+    filter_label: Digita
+    reputation: reputazione
+    flag_post_type: Post contrassegnato come {{ type }}.
+    flag_user_type: Utente contrassegnato come {{ type }}.
+    edit_post: Modifica il post
+    list_post: Lista il post
+    unlist_post: Rimuovi post
   timeline:
     undeleted: Non cancellato
     deleted: eliminato
@@ -1858,6 +1864,6 @@ ui:
     post_hide_list: Questo post è stato nascosto dall'elenco.
     post_show_list: Questo post è stato mostrato in elenco.
     post_reopen: Questo post è stato riaperto.
-    post_list: This post has been listed.
-    post_unlist: This post has been unlisted.
-    post_pending: Your post is awaiting review. This is a preview, it will be visible after it has been approved.
+    post_list: Questo post è stato inserito.
+    post_unlist: Questo post è stato rimosso.
+    post_pending: Il tuo post è in attesa di revisione. Sarà visibile dopo essere stato approvato.
