--- a/i18n/pl_PL.yaml
+++ b/i18n/pl_PL.yaml
@@ -142,7 +142,7 @@ backend:
   error:
     common:
       invalid_url:
-        other: Invalid URL.
+        other: Nieprawidłowy URL.
     password:
       space_invalid:
         other: Hasło nie może zawierać spacji.
@@ -204,7 +204,7 @@ backend:
       already_deleted:
         other: Ten post został usunięty.
       under_review:
-        other: Your post is awaiting review. It will be visible after it has been approved.
+        other: Twój post oczekuje na recenzje. Będzie widoczny po jej akceptacji.
       not_found:
         other: Pytanie nie zostało odnalezione.
       cannot_deleted:
@@ -491,14 +491,14 @@ backend:
     accepted:
       other: zaakceptowane
     edit:
-      other: edit
+      other: edytuj
   review:
     queued_post:
-      other: Queued post
+      other: Post w kolejce
     flagged_post:
-      other: Flagged post
+      other: Post oznaczony
     suggested_post_edit:
-      other: Suggested edits
+      other: Sugerowane zmiany
 # The following fields are used for interface presentation(Front-end)
 ui:
   how_to_format:
@@ -680,8 +680,8 @@ ui:
       empty: Nie może być puste.
     msg:
       empty: Proszę wybrać powód.
-      not_a_url: URL format is incorrect.
-      url_not_match: URL origin does not match the current website.
+      not_a_url: Format adresu URL jest nieprawidłowy.
+      url_not_match: Wskazany URL nie pasuje do bieżącej witryny.
   tag_modal:
     title: Utwórz nowy tag
     form:
@@ -999,8 +999,10 @@ ui:
       change_email_info: >-
         Wysłaliśmy e-mail na ten adres. Prosimy postępować zgodnie z instrukcjami potwierdzającymi.
       email:
-        label: Nowy email
-        msg: Nowy adres email nie może być pusty.
+        label: Email
+      new_email:
+        label: New email
+        msg: New email cannot be empty.
       pass:
         label: Aktualne hasło
         msg: Hasło nie może być puste.
@@ -1049,7 +1051,7 @@ ui:
     asked: zadał(a)
     update: Zmodyfikowane
     edit: edytowany
-    commented: commented
+    commented: skomentowano
     Views: Wyświetlone
     Follow: Obserwuj
     Following: Obserwuje
@@ -1067,7 +1069,7 @@ ui:
       title: Odpowiedzi
       score: Ocena
       newest: Najnowsze
-      oldest: Oldest
+      oldest: Najstarsze
       btn_accept: Akceptuj
       btn_accepted: Zaakceptowane
     write_answer:
@@ -1092,13 +1094,13 @@ ui:
       title: Otwórz ponownie ten post
       content: Czy na pewno chcesz go ponownie otworzyć?
     list:
-      confirm_btn: List
-      title: List this post
+      confirm_btn: Lista
+      title: Pokaż ten post
       content: Are you sure you want to list?
     unlist:
-      confirm_btn: Unlist
-      title: Unlist this post
-      content: Are you sure you want to unlist?
+      confirm_btn: Usuń z listy
+      title: Usuń ten post z listy
+      content: Czy na pewno chcesz usunąć z listy?
     pin:
       title: Przypnij ten post
       content: Czy na pewno chcesz przypiąć go globalnie? Ten post będzie wyświetlany na górze wszystkich list postów.
@@ -1120,7 +1122,7 @@ ui:
     save: Zapisz
     delete: Usuń
     undelete: Przywróć
-    list: List
+    list: Lista
     unlist: Unlist
     unlisted: Unlisted
     login: Zaloguj się
@@ -1155,11 +1157,12 @@ ui:
     post_lowercase: post
     filter: Filter
     ignore: Ignore
-    submit: Submit
-    normal: Normal
-    closed: Closed
-    deleted: Deleted
-    pending: Pending
+    submit: Prześlij
+    normal: Normalny
+    closed: Zamknięty
+    deleted: Usunięty
+    pending: Oczekujący
+    more: More
   search:
     title: Wyniki wyszukiwania
     keywords: Słowa kluczowe
@@ -1176,7 +1179,7 @@ ui:
       more: Więcej
     tips:
       title: Porady dotyczące wyszukiwania zaawansowanego
-      tag: "<1>[tag]</1> wyszukiwanie w obrębie tagu"
+      tag: "<1>[tag]</1> search with a tag"
       user: "<1>user:username</1> wyszukiwanie według autora"
       answer: "<1> answers:0 </1> pytania bez odpowiedzi"
       score: "<1>score:3</1> posty z oceną 3+"
@@ -1576,8 +1579,8 @@ ui:
         validate: Email kontaktowy nie jest poprawny.
         text: Adres email głównego kontaktu odpowiedzialnego za tę stronę.
       check_update:
-        label: Software updates
-        text: Automatically check for updates
+        label: Aktualizacjia oprogramowania
+        text: Automatycznie sprawdzaj dostępność aktualizacji
     interface:
       page_title: Interfejs
       language:
@@ -1774,6 +1777,9 @@ ui:
       level:
         label: Wymagany poziom reputacji
         text: Wybierz reputację wymaganą dla uprawnień
+      msg:
+        should_be_number: the input should be number
+        number_larger_1: number should be equal or larger than 1
   form:
     optional: (opcjonalne)
     empty: nie może być puste
@@ -1792,20 +1798,20 @@ ui:
     edit_answer: Edytuj odpowiedź
     edit_tag: Edytuj tag
     empty: Nie ma więcej zadań do przeglądu.
-    approve_revision_tip: Do you approve this revision?
-    approve_flag_tip: Do you approve this flag?
-    approve_post_tip: Do you approve this post?
-    approve_user_tip: Do you approve this user?
+    approve_revision_tip: Czy akceptujesz tę wersję?
+    approve_flag_tip: Czy akceptujesz tę flagę?
+    approve_post_tip: Czy zatwierdzasz ten post?
+    approve_user_tip: Czy zatwierdzasz tego użytkownika?
     suggest_edits: Suggested edits
-    flag_post: Flag post
-    flag_user: Flag user
+    flag_post: Oznacz wpis
+    flag_user: Oznacz użytkownika
     queued_post: Queued post
     queued_user: Queued user
-    filter_label: Type
-    reputation: reputation
-    flag_post_type: Flagged this post as {{ type }}.
-    flag_user_type: Flagged this user as {{ type }}.
-    edit_post: Edit post
+    filter_label: Typ
+    reputation: reputacja
+    flag_post_type: Oznaczono ten wpis jako {{ type }}.
+    flag_user_type: Oznaczono tego użytkownika jako {{ type }}.
+    edit_post: Edytuj wpis
     list_post: List post
     unlist_post: Unlist post
   timeline:
@@ -1858,6 +1864,6 @@ ui:
     post_hide_list: Ten post został ukryty na liście.
     post_show_list: Ten post został wyświetlony na liście.
     post_reopen: Ten post został ponownie otwarty.
-    post_list: This post has been listed.
-    post_unlist: This post has been unlisted.
-    post_pending: Your post is awaiting review. This is a preview, it will be visible after it has been approved.
+    post_list: Ten wpis został umieszczony na liście.
+    post_unlist: Ten wpis został usunięty z listy.
+    post_pending: Twój wpis oczekuje na recenzje. Będzie widoczny po jej akceptacji.
