--- a/i18n/es_ES.yaml
+++ b/i18n/es_ES.yaml
@@ -1162,6 +1162,7 @@ ui:
     closed: Closed
     deleted: Deleted
     pending: Pending
+    more: More
   search:
     title: Resultados de la búsqueda
     keywords: Palabras claves
@@ -1776,6 +1777,9 @@ ui:
       level:
         label: Nivel de reputación requerido
         text: Elegir reputación requerida para los privilegios
+      msg:
+        should_be_number: the input should be number
+        number_larger_1: number should be equal or larger than 1
   form:
     optional: (opcional)
     empty: no puede estar en blanco
