--- a/i18n/id_ID.yaml
+++ b/i18n/id_ID.yaml
@@ -1002,6 +1002,8 @@ ui:
         label: Email
       new_email:
         label: New email
+      new_email:
+        label: New email
         msg: New email cannot be empty.
       pass:
         label: Current password
@@ -1162,6 +1164,7 @@ ui:
     closed: Closed
     deleted: Deleted
     pending: Pending
+    more: More
   search:
     title: Search Results
     keywords: Keywords
@@ -1776,6 +1779,9 @@ ui:
       level:
         label: Reputation required level
         text: Choose the reputation required for the privileges
+      msg:
+        should_be_number: the input should be number
+        number_larger_1: number should be equal or larger than 1
   form:
     optional: (optional)
     empty: cannot be empty
