--- a/i18n/sk_SK.yaml
+++ b/i18n/sk_SK.yaml
@@ -1162,6 +1162,7 @@ ui:
     closed: Closed
     deleted: Deleted
     pending: Pending
+    more: More
   search:
     title: Výsledky vyhľadávania
     keywords: Kľúčové slová
@@ -1776,6 +1777,9 @@ ui:
       level:
         label: Reputation required level
         text: Choose the reputation required for the privileges
+      msg:
+        should_be_number: the input should be number
+        number_larger_1: number should be equal or larger than 1
   form:
     optional: (voliteľné)
     empty: nemôže byť prázdne
