--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -765,6 +765,11 @@ ui:
     day: day
     hours: hours
     days: days
+  reaction:
+    heart: heart
+    smile: smile
+    frown: frown
+    tooltip: " and {{count}} more..."
   comment:
     btn_add_comment: Add comment
     reply_to: Reply to
