--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -18,7 +18,6 @@
 # The following fields are used for back-end
 
 backend:
-
   base:
     success:
       other: Success.
@@ -202,6 +201,9 @@ backend:
         other: The old password verification failed
       new_password_same_as_previous_setting:
         other: The new password is the same as the previous one.
+    meta:
+      object_not_found:
+        other: Meta object not found
     question:
       already_deleted:
         other: This post has been deleted.
@@ -314,7 +316,8 @@ backend:
       name:
         other: rude or abusive
       desc:
-        other: A reasonable person would find this content inappropriate for respectful
+        other:
+          A reasonable person would find this content inappropriate for respectful
           discourse.
     a_duplicate:
       name:
@@ -327,7 +330,8 @@ backend:
       name:
         other: not an answer
       desc:
-        other: This was posted as an answer, but it does not attempt to answer the
+        other:
+          This was posted as an answer, but it does not attempt to answer the
           question. It should possibly be an edit, a comment, another question,
           or deleted altogether.
     no_longer_needed:
@@ -388,7 +392,8 @@ backend:
         name:
           other: needs details or clarity
         desc:
-          other: This question currently includes multiple questions in one. It should
+          other:
+            This question currently includes multiple questions in one. It should
             focus on one problem only.
       other:
         name:
@@ -505,6 +510,9 @@ backend:
       other: Flagged post
     suggested_post_edit:
       other: Suggested edits
+  reaction:
+    tooltip:
+      other: "{{ .Names }} and {{ .Count }} more..."
 
 # The following fields are used for interface presentation(Front-end)
 ui:
@@ -769,7 +777,6 @@ ui:
     heart: heart
     smile: smile
     frown: frown
-    tooltip: " and {{count}} more..."
   comment:
     btn_add_comment: Add comment
     reply_to: Reply to
@@ -1446,7 +1453,6 @@ ui:
     qrcode_login_tip: Please use {{ agentName }} to scan the QR code and log in.
     login_failed_email_tip: Login failed, please allow this app to access your email information before try again.
 
-
   admin:
     admin_header:
       title: Admin
@@ -1827,7 +1833,7 @@ ui:
         text: Choose the reputation required for the privileges
       msg:
         should_be_number: the input should be number
-        number_larger_1 : number should be equal or larger than 1
+        number_larger_1: number should be equal or larger than 1
 
   form:
     optional: (optional)
@@ -1911,7 +1917,7 @@ ui:
     post_deleted: This post has been deleted.
     post_pin: This post has been pinned.
     post_unpin: This post has been unpinned.
-    post_hide_list:  This post has been hidden from list.
+    post_hide_list: This post has been hidden from list.
     post_show_list: This post has been shown to list.
     post_reopen: This post has been reopened.
     post_list: This post has been listed.
