--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1667,6 +1667,7 @@ ui:
         msg: Encryption cannot be empty.
         text: For most servers SSL is the recommended option.
         ssl: SSL
+        tls: TLS
         none: None
       smtp_port:
         label: SMTP port
