--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1447,7 +1447,7 @@ ui:
       title: Admin
     dashboard:
       title: Dashboard
-      welcome: Welcome to Answer Admin!
+      welcome: Welcome to {{site_name}} Admin!
       site_statistics: Site statistics
       questions: "Questions:"
       answers: "Answers:"
