--- a/i18n/ko_KR.yaml
+++ b/i18n/ko_KR.yaml
@@ -18,7 +18,6 @@
 # The following fields are used for back-end
 
 backend:
-
   base:
     success:
       other: 성공.
@@ -924,8 +923,8 @@ ui:
       msg:
         empty: 이메일을 입력하세요.
   oauth:
-    connect: {{ auth_name }}로 연결
-    remove: {{ auth_name }} 연결 해제
+    connect: "{{ auth_name }}로 연결"
+    remove: "{{ auth_name }} 연결 해제"
   oauth_bind_email:
     subtitle: 계정에 복구 이메일 추가
     btn_update: 이메일 주소 업데이트
@@ -1398,13 +1397,12 @@ ui:
     privileges: 권한
     plugins: 플러그인
     installed_plugins: 설치된 플러그인
-  website_welcome: {{site_name}}에 오신 것을 환영합니다
+  website_welcome: "{{site_name}}에 오신 것을 환영합니다"
   user_center:
     login: 로그인
-    qrcode_login_tip: {{ agentName }}을(를) 사용하여 QR 코드를 스캔하고 로그인하세요.
+    qrcode_login_tip: "{{ agentName }}을(를) 사용하여 QR 코드를 스캔하고 로그인하세요."
     login_failed_email_tip: 로그인 실패, 다시 시도하기 전에 이 앱이 이메일 정보에 접근할 수 있도록 허용하세요.
-  
-  
+
   admin:
     admin_header:
       title: 관리자
@@ -1461,7 +1459,7 @@ ui:
       pending: 처리 대기 중
       completed: 완료됨
       flagged: 신고됨
-      flagged_type: {{ type }}로 신고됨
+      flagged_type: "{{ type }}로 신고됨"
       created: 생성됨
       action: 동작
       review: 검토
